--- a/beautyChuSpring/src/main/webapp/css/main.css
+++ b/beautyChuSpring/src/main/webapp/css/main.css
@@ -4,7 +4,7 @@
 }
 
 /*html,body { width: 100%; height: 100%;}*/
-html.home,body.home { /* background:#1f1f1f !important; */background: #fff;}
+html.home,body.home { background:#1f1f1f !important;}
 .home .wrapper {display: none;}
 
 
@@ -44,11 +44,13 @@ html.home,body.home { /* background:#1f1f1f !important; */background: #fff;}
 .grid-by-slider .slider-content-container .slider-content .good .img-container .over { position: absolute; top:0; left:0; width: 100%; height:100%; display: block;background:url(../img/main/over-bg.png); display: none;}
 .grid-by-slider .slider-content-container .slider-content .good .img-container .over .anim-obj { position: absolute; top:50%; left:50%; margin-left: -32px; margin-top: -35px;}
 .grid-by-slider .slider-content-container .slider-content .good .img-container .over i { display: block; position: absolute; width: 100%; height: 100%; top:0; left:0; background:url(../img/main/210_over.png) 50% 50% no-repeat;}
-.grid-by-slider .slider-content-container .slider-content .good .good-name { position: absolute; width: 500px; text-align: center; display: block; left:50%; margin-left: -250px; top:332px; display: none; }
+.grid-by-slider .slider-content-container .slider-content .good .good-name { position: absolute; width: 500px; text-align: center; display: block; left:50%; margin-left: -250px; top:332px;  display: none; }
 .grid-by-slider .slider-content-container .slider-content .good .good-name img {zoom:0.7;}
-.grid-by-slider .slider-content-container .slider-content .good.active .img-container img { /* width: 470px;  height: 470px; */height: 430px; display:block; }
+.grid-by-slider .slider-content-container .slider-content .good .good-brand { position: absolute; width: 500px; text-align: center; display: block; margin-top: 20px; left:50%; margin-left: -250px;  display: none; }
+.grid-by-slider .slider-content-container .slider-content .good.active .img-container img { /* width: 470px; */ width: auto; height: 430px; display:block; }
 .grid-by-slider .slider-content-container .slider-content .good.active .good-name { top:450px !important; zoom:1; }
 .grid-by-slider .slider-content-container .slider-content .good.active .good-name img {zoom:1;}
+.grid-by-slider .slider-content-container .slider-content .good.active .good-brand { top:450px !important; zoom:1; }
 
 /* ie8 zoom prefix*/
 @media \0screen {
@@ -71,15 +73,14 @@ html.home,body.home { /* background:#1f1f1f !important; */background: #fff;}
 .grid-by-list .good-list li { position: absolute; top:0; left:0;}
 .grid-by-list .good-list li .good { width: 254px; height: 254px; }
 .grid-by-list .good-list li .good .img-container {padding:0 22px; }
-.grid-by-list .good-list li .good .img-container a img { width: 210px; height: 210px; display: block;}
-.grid-by-list .good-list li .good .img-container a { width: 210px; height: 210px; display: block; position: relative;}
+.grid-by-list .good-list li .good .img-container a img { /*내가막음 메인그리드 width: 210px;  */height: 210px; display: block; margin: 0 auto;}
+.grid-by-list .good-list li .good .img-container a { width: 210px; height: 210px; display: block; position: relative; overflow: hidden;}
 .grid-by-list .good-list li .good .img-container a:focus > .over {display:block;}  /* 2014-04-22 */
 .grid-by-list .good-list li .good .img-container .over { position: absolute; top:0; left:0; width: 100%; height:100%; display: block;background:url(../img/main/over-bg.png); display: none;}
 .grid-by-list .good-list li .good .img-container .over .anim-obj { position: absolute; top:50%; left:50%; margin-left: -32px; margin-top: -35px;}
 .grid-by-list .good-list li .good .img-container .over i { display: block; position: absolute; width: 100%; height: 100%; top:0; left:0; background:url(../img/main/210_over.png) 50% 50% no-repeat;}
-.grid-by-list .good-list li .good .good-brand { font-family: 'MyriadPro-Bold','Nanum Gothic', '나눔고딕','돋움','dotum','AppleSDGothic', 'AppleGothic', Helvetica, sans-serif; font-size: 14px; color: #333; text-align: center; display: block; text-decoration: none; line-height: 20px; }
-
-.grid-by-list .good-list li .good .good-name { font-family: 'MyriadPro-Bold','Nanum Gothic', '나눔고딕','돋움','dotum','AppleSDGothic', 'AppleGothic', Helvetica, sans-serif; font-size: 11px; color: #666; text-align:center; display: block; text-decoration: none; line-height: 14px; }
+.grid-by-list .good-list li .good .good-brand { font-family:'Nanum Gothic Bold', Helvetica, sans-serif; font-size: 14px; font-weight:bold; color: #333; text-align: center; display: block; text-decoration: none; line-height: 22px; }
+.grid-by-list .good-list li .good .good-name { font-family: 'Nanum Gothic Bold', 'Nanum Gothic', 'MyriadPro-Bold', '나눔고딕','돋움','dotum','AppleSDGothic', 'AppleGothic', Helvetica, sans-serif; font-size: 11px; color: #666; text-align:center; display: block; text-decoration: none; line-height: 14px; }
 
 
 .grid-by-list .btn-prev { background: url(../img/main/btn-prev.png)  0 0 no-repeat; width: 20px; height: 36px; display: block; text-indent: -9999em; overflow: hidden; position: absolute; top:400px; left:50%; margin-left: -560px; }
@@ -88,6 +89,139 @@ html.home,body.home { /* background:#1f1f1f !important; */background: #fff;}
 .grid-by-list .list-index li { float:left; width: 9px; height: 9px;/* background: url(../img/main/icon-index.png);*/ margin-right: 14px; }
 .grid-by-list .list-index li.active { background: url(../img/main/icon-index.png); }
 .grid-by-list .list-index li a { display: block; width: 100%; height: 100%; text-indent: -9999em; overflow: hidden; }
+
+
+/* ---------------------------best shop------------------------------- */
+/* proicon */
+/*
+.proicon {display:inline-block;height:18px;}
+.proicon:after {content:" ";display:block;clear:both;}
+.proicon .picon {display:inline-block;margin:0 0 3px 0;padding:0 3px;border:1px solid #888;font-family:'Verdana', 'Nanum Gothic';font-size:10px;}
+.proicon .picon.picon_limited,
+.proicon .picon.picon_time,
+.proicon .picon.picon_coupon{border:1px solid #252626; background:#252626; color:#fff;}
+.proicon .picon.picon_new,
+.proicon .picon.picon_best,
+.proicon .picon.picon_set,
+.proicon .picon.picon_only,
+.proicon .picon.picon_mobile,
+.proicon .picon.picon_reserve{border:1px solid #888; background:#fff;}
+.proicon .picon.picon_soldout{border:1px solid #a5a5a5; background:#a5a5a5; color:#fff;}
+.proicon .picon.picon_user{position:absolute; left:5px; top:5px; padding:0px; margin:0px; border:0px;}
+ */
+
+/* prolisttype1 */
+.prolisttype1 {position:relative;}
+.prolisttype1:after {content:" ";display:block;clear:both;}
+.prolisttype1>ul {margin:90px 0 0 1px;}
+.prolisttype1>ul>li {position:relative;float:left;}
+.prolisttype1 .chktypea{position:absolute; left:8px; top:8px; z-index:1;}
+.prolisttype1 .prolink {display:block;margin-top:-1px;margin-left:-1px;padding:5px 5px 27px 5px;border:1px solid #eceef1;background-color:#fff;}
+.prolisttype1 .prolink .propic {position:relative; margin:0 0 5px 0;display:block;}
+.prolisttype1 .prolink .propic img {width:100%;height:100%;}
+.prolisttype1 .prolink .propic .picon_user{position:absolute; left:0px; bottom:0px;}
+.prolisttype1 .prolink .proicon {margin:0 10px;}
+.prolisttype1 .prolink .txt_brand {display:block;padding:0 10px;height:16px;color:#252626;font-family:'Verdana', 'Nanum Gothic';font-size:10px;overflow:hidden;}
+.prolisttype1 .prolink .txt_ti {display:block;padding:3px 10px 0;height:17px;line-height:16px;color:#767676;font-size:11px;overflow:hidden;}
+.prolisttype1 .prolink .txt_price {display:block;padding:0 10px;height:15px;color:#000;font-family:'Verdana';font-size:11px;letter-spacing:-0.5px;}
+.prolisttype1 .prolink .txt_price del {display:inline-block;margin:0 4px 0 0;color:#767676;font-size:10px;}
+.prolisttype1 .prolink .txt_price em {display:inline-block;margin:0 4px 0 0;color:#000;font-size:11px;font-weight:bold;}
+.prolisttype1 .btn_wish {position:absolute;top:8px;right:8px;display:inline-block;width:14px;height:12px;background:url('http://img.gncostyle.com/gncoCom/images/common/bl_common.png') no-repeat 0 -233px;text-indent:-9999px;}
+.prolisttype1 .btn_wish.cnt {background-position:-14px -233px;}
+.prolisttype1 .btn_preview {position:absolute;bottom:12px;right:8px;display:inline-block;width:15px;height:15px;background:url('http://img.gncostyle.com/gncoCom/images/common/bl_common.png') no-repeat 0 -245px;text-indent:-9999px;}
+.prolisttype1 .btn_preview:hover {position:absolute;bottom:12px;right:8px;display:inline-block;width:15px;height:15px;background:url('http://img.gncostyle.com/gncoCom/images/common/bl_common.png') no-repeat -15px -245px;text-indent:-9999px;}
+.prolisttype1.prolist3>ul>li {width:33.33%;}
+.prolisttype1.prolist3>ul>li .prolink .propic img {width:349px;height:349px;}
+.prolisttype1.prolist4>ul>li {width:25%;}
+.prolisttype1.prolist4>ul>li .prolink .propic img {width:259px;height:259px;}
+.prolisttype1.prolist5>ul>li {width:20%;}
+.prolisttype1.prolist5>ul>li .prolink .propic {width:206px;height:160px;}
+#wrap.short .prolisttype1.prolist5>ul>li .prolink .propic {width:162px;height:162px;}
+.prolisttype1.prolist7>ul>li {width:20%;}
+.prolisttype1.prolist7>ul>li.big {width:40%;}
+.prolisttype1.prolist7>ul>li.big .prolink .propic {margin:20px 0 22px 0;width:421px;height:480px;overflow:hidden;}
+.prolisttype1.prolist7>ul>li.big .prolink .propic img {margin-left:-30px;width:480px;height:480px;}
+.prolisttype1.best .icon_best {position:absolute;top:11px;left:11px; z-index:1; display:inline-block;width:31px;height:36px;background:url('http://img.gncostyle.com/gncoCom/images/common/icon_best.png') no-repeat 0 0;text-indent:-9999px;}
+.prolisttype1.best .icon_best1 {background-position:0 0;}
+.prolisttype1.best .icon_best2 {background-position:-31px 0;}
+.prolisttype1.best .icon_best3 {background-position:-62px 0;}
+.prolisttype1.best .icon_best4 {background-position:-93px 0;}
+.prolisttype1.best .icon_best5 {background-position:-124px 0;}
+.prolisttype1 .prolstab {position:relative;margin-top:32px;height:47px;border-top:2px solid #585858;border-left:1px solid #dce0e5;border-right:1px solid #dce0e5;border-bottom:1px solid #dce0e5;}
+.prolisttype1 .prolstab:after {content:" ";display:block;clear:both;}
+.prolisttype1 .prolstab .protxt {float:left;padding:15px 0 15px 24px;font-size:13px;color:#252626;}
+.prolisttype1 .prolstab .protxt strong {color:#0f54a2;font-size:13px;font-weight:bold;border-bottom:1px solid #0f54a2;}
+.prolisttype1 .prolstab .protxt strong em {display:inline-block;margin:0 2px 1px 0;color:#0f54a2;font-family:'Verdana';font-size:15px;font-weight:bold;vertical-align:bottom;}
+.prolisttype1 .prolstab>ul {float:right;margin:0;}
+.prolisttype1 .prolstab>ul>li {float:left;}
+.prolisttype1 .prolstab>ul>li:first-child {padding:8px 9px 0 0;}
+.prolisttype1 .prolstab>ul>li .outSelB {width:123px;}
+.prolisttype1 .prolstab>ul>li .outSelB .tag_options {height:92px;}
+.prolisttype1 .prolstab>ul>li>a {display:block;width:80px;height:47px;line-height:47px;text-align:center;border-left:1px solid #dce0e5;border-bottom:1px solid #dce0e5;background-color:#f8f8f8;color:#767676;font-size:12px;}
+.prolisttype1 .prolstab>ul>li>a.cnt {border-bottom:1px solid #fff;background-color:#fff;color:#252525;font-weight:bold;}
+/*prolisttype1:wish*/
+.wishlist .prolisttype1 .prolink {padding:5px 5px 100px 5px;}
+.wishlist .prolisttype1 .btn_preview {bottom:80px;}
+.wishlist .prolisttype1 .btnshoppingbag {position:absolute;bottom:0;left:0;width:100%;border-top:1px solid #eceef1;text-align:center;}
+.wishlist .prolisttype1 .btnshoppingbag .bl_shoppingbag {margin:15px 0;width:152px;}
+
+
+/* prolisttype2 */
+.prolisttype2 {position:relative;width:100%;}
+.prolisttype2:after {content:" ";display:block;clear:both;}
+.prolisttype2 ul {}
+.prolisttype2 ul li {clear:both;padding:0 0 0 0;background:url('http://img.gncostyle.com/gncoCom/images/common/dot_gray2_3x1.gif') repeat-x 0 0;}
+.prolisttype2 ul li:first-child {background-image:none;}
+.prolisttype2 .prolink {position:relative;display:block;padding:15px 0 15px 108px;min-height:96px;}
+.prolisttype2 .prolink .pic {position:absolute;top:15px;left:0;}
+.prolisttype2 .prolink .txt_brand {display:block;padding:12px 0 0 0;height:17px;color:#252626;font-family:'Verdana', 'Nanum Gothic';font-size:10px;overflow:hidden;}
+.prolisttype2 .prolink .txt_ti {display:block;padding:3px 0 0 0;height:26px;line-height:13px;color:#252626;font-size:11px;overflow:hidden;}
+.prolisttype2 .prolink .txt_price {display:block;padding:5px 0 0 0;color:#000;font-family:'Verdana';font-size:11px;letter-spacing:-0.5px;}
+.prolisttype2 .prolink .txt_price del {color:#767676;font-size:10px;}
+.prolisttype2 .prolink .txt_price em {display:block;margin:0;line-height:12px;color:#000;font-size:11px;font-weight:bold;}
+.prolisttype2 .prolink .txt_price em .won {display:inline-block;margin:0 2px 0 0;font-family:'Nanum Gothic';}
+
+/* prolisttype3 */
+.prolisttype3 {position:relative;width:100%;}
+.prolisttype3 .grid {}
+.prolisttype3 .grid img {width:100%;}
+
+/* pajinate */
+.pajinate {}
+.pajinate:after {content:" ";display:block;clear:both;}
+.pajinate .pajinatels {}
+.pajinate .pajinatels:after {content:" ";display:block;clear:both;}
+.pajinate .pajinatels li {float:left;}
+.pajinate .pajinatenav {}
+.pajinate .pajinatenav .page_link {display:none;}
+
+.cont1080 {
+position: relative;
+margin: 0 auto;
+width: 1080px;
+height: 500px;
+padding-top: 50px;
+}
+
+.best-shop-wrap {
+	background-color: #161616;
+	margin-top: -1px;
+}
+
+.best-shop-wrap .bg { background: url(../img/main/show-window-center.png) no-repeat 50% 0; height: 100%; position:absolute; width: 100%; }
+
+.best-shop-wrap h2 {
+background: url(../img/main/title-best-shop.png) no-repeat;
+width: 101px;
+height: 51px;
+text-indent: -9999em;
+overflow: hidden;
+position: absolute;
+left: 50%;
+margin-left: -50px;
+z-index: 100;
+top: 904px;
+}
 
 /* 반응형 스타일 같음
 .large-style { width: 950px; position: absolute; top:188px; left:50%; margin-left: -475px;}
