--- a/beautyChuSpring/src/main/webapp/css/basic.css
+++ b/beautyChuSpring/src/main/webapp/css/basic.css
@@ -1,10 +1,18 @@
 @charset 'utf-8';
 
 @import url('common.css');
+@import url('font.css');
 
+@import url('header.css');
 @import url('reset.css');
+@import url('imagesprite.css');
 @import url('layout.css');
+@import url('intro.css');
 @import url('main.css');
 
 
+@import url('search.css');
+
+@import url('etc.css');
+@import url('jquery.fs.selecter.css');
 
