--- a/beautyChuSpring/src/main/webapp/css/header.css
+++ b/beautyChuSpring/src/main/webapp/css/header.css
@@ -38,6 +38,7 @@
     background: url(../images/search-dark.png) no-repeat 10px 6px #fcfcfc;
     color: #6a6f75;
     width: 250px;
+    outline: none !important;
     -webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
     -moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
     box-shadow: 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 0 rgba(0, 0, 0, 0.9) inset;
